--- a/net.greenbeansit.timer/pom.xml
+++ b/net.greenbeansit.timer/pom.xml
@@ -26,6 +26,12 @@
 			<version>0.9.3</version>
 		</dependency>
 		<dependency>
+			<groupId>org.gwtbootstrap3</groupId>
+			<artifactId>gwtbootstrap3-extras</artifactId>
+			<version>0.9.3</version>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
 			<groupId>com.google.gwt</groupId>
 			<artifactId>gwt-servlet</artifactId>
 			<version>${gwtVersion}</version>
