--- a/net.greenbeansit.timer/.gitignore
+++ b/net.greenbeansit.timer/.gitignore
@@ -28,3 +28,17 @@ www-test/
 .gwt-tmp/
 /test-classes/
 /target/
+
+######################
+# OSX
+######################
+ 
+.DS_Store
+.svn
+ 
+# Thumbnails
+._*
+ 
+# Files that might appear on external disk
+.Spotlight-V100
+.Trashes
