--- a/net.greenbeansit.timer/.classpath
+++ b/net.greenbeansit.timer/.classpath
@@ -7,7 +7,7 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="src" output="target/net.greenbeansit.timer-0.0.1-SNAPSHOT/WEB-INF/classes" path="target/generated-sources/gwt">
+	<classpathentry kind="src" path="target/generated-sources/gwt">
 		<attributes>
 			<attribute name="optional" value="true"/>
 			<attribute name="maven.pomderived" value="true"/>
