--- a/JobTracker/src/main/webapp/WEB-INF/web.xml
+++ b/JobTracker/src/main/webapp/WEB-INF/web.xml
@@ -9,4 +9,16 @@
     <welcome-file>default.htm</welcome-file>
     <welcome-file>default.jsp</welcome-file>
   </welcome-file-list>
+  
+  <!-- Servlets -->
+  	<servlet>
+  		<servlet-name>employeeServiceImpl</servlet-name>
+  		<servlet-class>
+    		net.greenbeansit.jobtracker.server.EmployeeServiceImpl
+  		</servlet-class>
+	</servlet>
+	<servlet-mapping>
+  		<servlet-name>employeeServiceImpl</servlet-name>
+	  	<url-pattern>/rest/*</url-pattern>
+	</servlet-mapping>
 </web-app>
