--- a/JobTracker/war/WEB-INF/web.xml
+++ b/JobTracker/war/WEB-INF/web.xml
@@ -1,13 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee 
-              http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
-	version="2.5" xmlns="http://java.sun.com/xml/ns/javaee">
+<!DOCTYPE web-app
+    PUBLIC "-//Sun Microsystems, Inc.//DTD Web Application 2.3//EN"
+    "http://java.sun.com/dtd/web-app_2_3.dtd">
 
+<web-app>
 
-	<!--  
 	<servlet>
-		<servlet-name>JobTracker</servlet-name>
+		<servlet-name>JobTrackerServlet</servlet-name>
 		<servlet-class>org.glassfish.jersey.servlet.ServletContainer</servlet-class>
 		<init-param>
 			<param-name>jersey.config.server.provider.packages</param-name>
@@ -17,10 +16,10 @@
 		</init-param>
 	</servlet>
 	<servlet-mapping>
-		<servlet-name>JobTracker</servlet-name>
-		<url-pattern>/jobtracker/*</url-pattern>
+		<servlet-name>JobTrackerServlet</servlet-name>
+		<url-pattern>/api/*</url-pattern>
 	</servlet-mapping>
--->
+
 
 	<!-- Default page to serve -->
 	<welcome-file-list>
