--- a/JobTracker/war/WEB-INF/web.xml
+++ b/JobTracker/war/WEB-INF/web.xml
@@ -1,30 +1,25 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee 
+         xsi:schemaLocation="http://java.sun.com/xml/ns/javaee 
               http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
-	version="2.5" xmlns="http://java.sun.com/xml/ns/javaee">
+         version="2.5"
+         xmlns="http://java.sun.com/xml/ns/javaee">
 
-
-
-	<servlet>
-		<servlet-name>JobTracker</servlet-name>
-		<servlet-class>org.glassfish.jersey.servlet.ServletContainer</servlet-class>
-		<init-param>
-			<param-name>jersey.config.server.provider.packages</param-name>
-			<param-value>
-				net.greenbeansit.jobtracker.server
-			</param-value>
-		</init-param>
-	</servlet>
-	<servlet-mapping>
-		<servlet-name>JobTracker</servlet-name>
-		<url-pattern>/jobtracker/*</url-pattern>
-	</servlet-mapping>
-
-
-	<!-- Default page to serve -->
-	<welcome-file-list>
-		<welcome-file>JobTracker.html</welcome-file>
-	</welcome-file-list>
+  <!-- Servlets -->
+  <!--  <servlet>
+    <servlet-name>greetServlet</servlet-name>
+    <servlet-class>net.greenbeansit.jobtracker.server.GreetingServiceImpl</servlet-class>
+  </servlet>
+  
+  <servlet-mapping>
+    <servlet-name>greetServlet</servlet-name>
+    <url-pattern>/jobtracker/greet</url-pattern>
+  </servlet-mapping>
+  -->
+  
+  <!-- Default page to serve -->
+  <welcome-file-list>
+    <welcome-file>JobTracker.html</welcome-file>
+  </welcome-file-list>
 
 </web-app>
