--- a/JobTracker/src/main/webapp/WEB-INF/web.xml
+++ b/JobTracker/src/main/webapp/WEB-INF/web.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://java.sun.com/xml/ns/javaee" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd" version="3.0">
-  <display-name>JobTracker</display-name>
+  <display-name>client</display-name>
   <welcome-file-list>
     <welcome-file>index.html</welcome-file>
     <welcome-file>index.htm</welcome-file>
@@ -9,16 +9,14 @@
     <welcome-file>default.htm</welcome-file>
     <welcome-file>default.jsp</welcome-file>
   </welcome-file-list>
-  
-  <!-- Servlets -->
-  	<servlet>
-  		<servlet-name>employeeServiceImpl</servlet-name>
-  		<servlet-class>
+  <servlet>
+    <servlet-name>employeeServiceImpl</servlet-name>
+    <servlet-class>
     		net.greenbeansit.jobtracker.server.EmployeeServiceImpl
   		</servlet-class>
-	</servlet>
-	<servlet-mapping>
-  		<servlet-name>employeeServiceImpl</servlet-name>
-	  	<url-pattern>/rest/*</url-pattern>
-	</servlet-mapping>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>employeeServiceImpl</servlet-name>
+    <url-pattern>/rest/*</url-pattern>
+  </servlet-mapping>
 </web-app>
