--- a/Jobtracker.shared/.project
+++ b/Jobtracker.shared/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Jobtracker.shared</name>
+	<name>shared</name>
 	<comment></comment>
 	<projects>
 	</projects>
