--- a/JobTracker/pom.xml
+++ b/JobTracker/pom.xml
@@ -12,7 +12,7 @@
 		<gwtVersion>2.7.0</gwtVersion>
 		<restygwt.version>2.0.3</restygwt.version>
 		<!-- GWT needs at least java 1.5 -->
-		<webappDirectory>${project.build.directory}/${project.build.finalName}</webappDirectory>
+		<webappDirectory>${project.build.directory}/..</webappDirectory>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<spring.starter.version>1.3.3.RELEASE</spring.starter.version>
 		<tomcat.version>7.0.59</tomcat.version>
@@ -109,7 +109,7 @@
 
 	<build>
 		<!-- Generate compiled stuff in the folder used for developing mode -->
-		<outputDirectory>${webappDirectory}/WEB-INF/classes</outputDirectory>
+		<outputDirectory>${webappDirectory}/war/WEB-INF/classes</outputDirectory>
 		<plugins>
 			<!-- GWT Maven Plugin -->
 			<plugin>
