--- a/JobTracker/war/WEB-INF/web.xml
+++ b/JobTracker/war/WEB-INF/web.xml
@@ -1,38 +1,4 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee 
-              http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
-	version="2.5" xmlns="http://java.sun.com/xml/ns/javaee">
-
-	<!-- Servlets -->
-	<!-- <servlet> <servlet-name>greetServlet</servlet-name> <servlet-class>net.greenbeansit.jobtracker.server.GreetingServiceImpl</servlet-class> 
-		</servlet> <servlet-mapping> <servlet-name>greetServlet</servlet-name> <url-pattern>/jobtracker/greet</url-pattern> 
-		</servlet-mapping> -->
-
-	<servlet>
-		<servlet-name>Demo Application</servlet-name>
-		<servlet-class>org.glassfish.jersey.servlet.ServletContainer</servlet-class>
-		<init-param>
-			<param-name>jersey.config.server.provider.packages</param-name>
-			<param-value>
-				net.greenbeansit.jobtracker.server.services
-			</param-value>
-		</init-param>
-		<init-param>
-			<param-name>jersey.config.server.provider.classnames</param-name>
-			<param-value>
-				introduction.demo.gwt.server.exception.BaseExceptionMapper
-			</param-value>
-		</init-param>
-	</servlet>
-	<servlet-mapping>
-		<servlet-name>Demo Application</servlet-name>
-		<url-pattern>/api/*</url-pattern>
-	</servlet-mapping>
-
-	<!-- Default page to serve -->
-	<welcome-file-list>
-		<welcome-file>JobTracker.html</welcome-file>
-	</welcome-file-list>
-
+<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://java.sun.com/xml/ns/javaee" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd" version="3.0">
+  <display-name>JobTracker.client</display-name>
 </web-app>
