--- a/JobTracker.backend/WebContent/WEB-INF/web.xml
+++ b/JobTracker.backend/WebContent/WEB-INF/web.xml
@@ -9,7 +9,7 @@
 		<servlet-class>org.glassfish.jersey.servlet.ServletContainer</servlet-class>
 		<init-param>
 			<param-name>jersey.config.server.provider.packages</param-name>
-			<param-value>net.greenbeansit.jobtracker.server.services</param-value>
+			<param-value>net.greenbeansit.jobtracker.server.rest.services</param-value>
 		</init-param>
 	</servlet>
 	<servlet-mapping>
