change backend pom

--- a/JobTracker.backend/pom.xml
+++ b/JobTracker.backend/pom.xml
@@ -41,7 +41,8 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-tomcat</artifactId>
 			<version>${spring.starter.version}</version>
-			<scope>provided</scope>
+			<!-- Uncomment scope for intelliJ compatibility-->
+			<!--<scope>provided</scope>-->
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -108,7 +109,7 @@
 	</dependencies>
 
 	<build>
-		<sourceDirectory>src/java</sourceDirectory>
+		<sourceDirectory>src/main</sourceDirectory>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
