--- a/JobTracker.backend/WebContent/WEB-INF/web.xml
+++ b/JobTracker.backend/WebContent/WEB-INF/web.xml
@@ -13,7 +13,7 @@
 		</init-param>
 	</servlet>
 	<servlet-mapping>
-		<servlet-name>EmployeeService</servlet-name>
-		<url-pattern>/rest/*</url-pattern>
+		<servlet-name>RestService</servlet-name>
+		<url-pattern>/*</url-pattern>
 	</servlet-mapping>
 </web-app>
