Update ManagePageRestService and shared classes

--- a/JobTracker.backend/src/main/resources/application.properties
+++ b/JobTracker.backend/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-logging.level.org.hibernate.SQL=debug
+logging.level.org.hibernate.SQL=info
 
 # ===============================
 # = DATA SOURCE
@@ -18,7 +18,7 @@ spring.datasource.validationQuery = SELECT 1
 # Use spring.jpa.properties.* for Hibernate native properties (the prefix is
 # stripped before adding them to the entity manager).
 # Show or not log for each sql query
-spring.jpa.show-sql = true
+# spring.jpa.show-sql = true
 # Naming strategy
 spring.jpa.hibernate.naming-strategy = org.hibernate.cfg.ImprovedNamingStrategy
 
