--- a/JobTracker.backend/src/main/resources/application.properties
+++ b/JobTracker.backend/src/main/resources/application.properties
@@ -1,4 +1,5 @@
-logging.level.org.hibernate.SQL=info
+logging.level.org.springframework.web=DEBUG
+logging.level.org.hibernate=ERROR
 
 # ===============================
 # = DATA SOURCE
